--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-  <meta charset="UTF-8">
-  <title>皮肤病识别</title>
-</head>
-<body>
-  <h1>上传皮损照片</h1>
-  <form action="/result" method="post" enctype="multipart/form-data">
-    <input type="file" name="image" accept="image/*" required />
-    <button type="submit">提交并查看结果</button>
-  </form>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}上传皮损照片{% endblock %}
+{% block content %}
+<h1>上传皮损照片</h1>
+<form action="/result" method="post" enctype="multipart/form-data">
+  <input type="file" name="image" accept="image/*" required>
+  <button type="submit">提交</button>
+</form>
+{% endblock %}
